		consisting of arrays of GPNodes.  And you delete ".node"
		from various places.
	Added newIndividual(...) methods to GPSpecies which override the
		standard ones and perform light cloning rather than
		deep cloning.  A bug fix tickled by our change from
		protoClone to clone.  Thanks to Michael Solano
		(mike.solano@gmail.com).
	Restored docs/tutorial4/GPGraph.png, which had been removed in
		the 14->15 transition by accident
	Moved P_FITNESS into Fitness.java, deleting from other classes,
		and made it consistently equal to "fitness".
	Moved FITNESS_PREAMBLE into Fitness.java, deleting from other
		classes, and made it consistently equal to "Fitness: "
	Moved EVALUATED_PREAMBLE into Individual.java, deleting from
		other classes, and made it consistently equal to
		"Evaluated: "
	Moved P_INDIVIDUAL into Individual.java, deleting from other
		classes, and made it consistently equal to "individual"
	Moved P_DATA into GPProblem.java, deleting from other classes,
		and made it consistently equal to "data"
	Moved CHECKBOUNDARY into BreedingSource, deleting from other
		classes, and made it consistently equal to 8.
	Renamed type -> t in one method in GPSetType
	Renamed data -> dataPart and address -> addressPart in
		MultiplexerSlow and its various functions
	Renamed numRules -> ruleCount in one function in RuleSet
	Changed P_PROB to P_CROSSOVERPROB in RuleCrossoverPipeline.
		Also changed its value from "prob" to "crossover-prob".
		It was incorrectly shadowing P_PROB ( = "prob" ) used
		for a different function in BreedingSource
	Moved the teambots package to the CVS repository contrib
		directory
	Fixed a bug in the Makefile which was building code that depended
		on JFreeChart in the main build.  To fix this, we deleted
		the 'make chart' option and instead created a 'make gui'
		option.  Now the GUI isn't built when you just do 'make'.
		You have to type 'make gui' *and* have the JFreeChart
		etc. jar files installed.